# Fintech-platform

./: Cargo.toml
fintech-cli/: Cargo.toml
fintech-cli/src/: main.rs
fintech-common/: Cargo.toml
fintech-common/src/: errors.rs  lib.rs  tx.rs
fintech-common/src/core/: types.rs
fintech-web/: Cargo.toml
fintech-web/src/: main.rs
fintech-web/src/core/: matching.rs
src/: core.rs  main.rs  trading_platform.rs
