[package]
name = "fintech-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
fintech-common = { path = "../fintech-common" }
fintech-web = { path = "../fintech-web" }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.0", features = ["full"] }
