[package]
name = "fintech-web"
version = "0.1.0"
edition = "2024"

[dependencies]
fintech-common = { path = "../fintech-common" }
pretty_env_logger = "0.5.0"
log = "0.4.27"
serde = "1.0.219"
tokio = { version = "1.47.1" , features = ["full"] }
warp = { version = "0.4.0", features = ["server"] }
socket2 = { version = "0.4.0-alpha.5" }



